---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-02-11
  Changes:
    - unify virtual signals with the ones added to base in 2.0.34
    - fix error when removing mods providing signals used in nixies
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-10-18
  Changes:
    - cleanup unused prototype fields
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-17
  Changes:
    - Updated for Factorio 2.0
    - Support for `double` by sending hex=2 and value high half on green, low half on red
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2024-04-11
  Changes:
    - removed simhelper, use native sim mod loading
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2023-12-22
  Changes:
    - removed use of funccapture, which is being removed
    - Type annotations and minor bugfixes
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2022-06-02
  Changes:
    - use funccapture for tips & tricks
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021-02-03
  Changes:
    - Updated locales
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-01-29
  Changes:
    - Added Tips & Tricks simulations
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020-11-24
  Changes:
    - Update for Factorio 1.1