@@ -34,10 +34,21 @@ cathodes=Cathodes
 nixie-tube-slashed-zero=Slashed Zero
 nixie-tube-update-speed-alpha=Alpha Nixie update speed
 nixie-tube-update-speed-numeric=Numeric Nixie update speed
+nixie-tube-flickering=Flickering
 
 [mod-setting-description]
 nixie-tube-update-speed-alpha=Sets the number of Alpha Nixies updated per tick. Higher = faster updates
 nixie-tube-update-speed-numeric=Sets the number of Numeric Nixie groups updated per tick. Higher = faster updates
+
+[string-mod-setting]
+nixie-tube-flickering-always=Always
+nixie-tube-flickering-on-outage=On low power
+nixie-tube-flickering-never=Never
+
+[string-mod-setting-description]
+nixie-tube-flickering-always=Nixies will have a light flicker that gets heavier with low power.
+nixie-tube-flickering-on-outage=Nixies will have a light flicker on low power.
+nixie-tube-flickering-never=Nixies will never flicker, only dimming with low power.
 
 [tips-and-tricks-item-name]
 nixie-tubes=Nixie Tubes
