@@ -2,6 +2,7 @@
 Version: 2.0.3
 Date: ????
   Changes:
+    - add dimming for low power
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 2025-02-11
